# uni

./: .gitignore  Documents - Ярлык.lnk  README.md  usefull.md  usefull_links.txt
AI/: .gitignore  README.md  requirements.txt
AI/1 lab/: h2.py  linear.py
AI/2 lab/: hp.py
algos/: README.md  Лаба 3_.docx  Лаба 4.docx  ОтчетЛаб1 - исправить.docx  лаба 2.docx
algos/1_sem/: Readme.md
algos/2_sem/: lab4.ipynb
algos/lab2/: dick_k_anon.ipynb  лаба 2.docx
algos/lab3/: Лаба 3_.docx
algos/lab4/: main.py
algos/lab5/: main.py
base AI/: usefull links.md
base AI/practice/: house.ipynb  house.py  submission.csv
base/derevative/: derivative.aux  derivative.fdb_latexmk  derivative.fls  derivative.tex  x^2.py
dev-ops/auto_install-main/: Todos.md  new_program_structure.sh
dev-ops/ci-cd/: ci-cd (4).docx  (+1 more)
english/: Шарабарин EAP 6.docx  Шарабарин ESP 1-5.docx  Шарабарин ESP 6-10.docx  Шарабарин Essay 14.03.docx
functional_prog/: README.md  table.txt
linux/: README.md
others/projects/ml/ml-automation/: generate_sample.py  main.py  pyproject.toml  requirements.txt  setup_ml_toolbox.sh  test.txt
others/projects/ml/ml-automation/config/: config.yaml
others/projects/ml/ml-automation/data/: sample.csv
others/projects/ml/ml-automation/graph/: a.txt  main.py  main2.py
others/projects/ml/ml-automation/models/: best_automl.pkl
others/projects/ml/ml-automation/src/: automl_hub.py  utils.py
prog_calc/: CMakeLists.txt  Readme.md  calculatorform.cpp  calculatorform.h  loginform.cpp  loginform.h  loginform.ui  main.cpp
pytorch/: getting_started.py
(+522 files in other folders)
