[project]
name = "ml-automation"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
ackage-mode = false  
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "transformers (>=4.56.2,<5.0.0)",
    "datasets (>=4.1.1,<5.0.0)",
    "accelerate (>=1.10.1,<2.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "shap (>=0.48.0,<0.49.0)",
    "eli5 (>=0.16.0,<0.17.0)",
    "scikit-optimize (>=0.10.2,<0.11.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "flaml (>=2.3.6,<3.0.0)",
    "h2o (>=3.46.0.7,<4.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyterlab (>=4.4.7,<5.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]
